--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -1,4 +1,6 @@
 # Android Release build github workflow based off https://blog.logrocket.com/flutter-ci-cd-using-github-actions/
+# Substito flutter-action: https://github.com/marketplace/actions/flutter-action
+# Substito repository: https://github.com/subosito/flutter-action
 name: Android Release
 
 # 1
@@ -28,12 +30,14 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: "12.x"
+          cache: 'gradle' # speed up java setup
       # 10   
       - uses: subosito/flutter-action@v2
         with:
           # 11
           flutter-version: "3.10.5"
           channel: 'stable'
+          cache: true # speed up flutter sdk setup
       # 12
       - name: Get dependencies
         run: flutter pub get
