--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -53,14 +53,17 @@ jobs:
       # Steps represent a sequence of tasks that will be executed as part of the job
       steps:
         - uses: actions/checkout@v3
+          with:
+            fetch-depth: 0 # https://github.com/GitTools/actions/blob/main/docs/examples/github/gitversion/setup/usage-examples.md
         # 14
         - name: Install GitVersion
-          uses: gittools/actions/gitversion/setup@v0.9.7
+          uses: gittools/actions/gitversion/setup@v0.10.2
           with:
             versionSpec: "5.x"
+            includePrerelease: true
         - name: Use GitVersion
           id: gitversion
-          uses: gittools/actions/gitversion/execute@v0.9.7
+          uses: gittools/actions/gitversion/execute@v0.10.2
         # 15
         - name: Create version.txt with nuGetVersion
           run: echo ${{ steps.gitversion.outputs.nuGetVersion  }} > version.txt
