--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -21,25 +21,46 @@ jobs:
       # 1 - checkout source
       - uses: actions/checkout@v3
 
-      # 2 - Setup Java environment for Andorid build
+      # 2 - Get version.txt workflow artifact created by version job
+      - name: Get version.txt
+        uses: actions/download-artifact@v2
+        with:
+          name: gitversion
+
+      # 3 - Create version1.txt file from version.txt without newlines
+      - name: Create new file without newline char from version.txt
+        run: tr -d '\n' < version.txt > version1.txt
+        
+      # 4 - wow, this is kind of involved just to get a version number
+      - name: Read version
+        id: version
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: version1.txt
+ 
+      # 5 - set version in pubspec.yaml ?
+      - name: Update version in YAML
+        run: sed -i 's/99.99.99+99/${{ steps.version.outputs.content }}+${{ github.run_number }}/g' pubspec.yaml
+ 
+      # 6 - Setup Java environment for Andorid build
       - uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
           java-version: "12.x"
           cache: 'gradle' # speed up java setup
       
-      # 3 - Setup flutter SDK
+      # 7 - Setup flutter SDK
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.10.5"
           channel: 'stable'
           cache: true # speed up flutter sdk setup
       
-      # 4 - Get flutter dependencies
+      # 8 - Get flutter dependencies
       - name: Get dependencies
         run: flutter pub get
 
-      # 5 - run flutter android appbundle build
+      # 9 - run flutter android appbundle build
       - name: Start release build
         run: flutter build appbundle
 
