--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -1,6 +1,9 @@
 # Android Release build github workflow based off https://blog.logrocket.com/flutter-ci-cd-using-github-actions/
 # Substito flutter-action: https://github.com/marketplace/actions/flutter-action
 # Substito repository: https://github.com/subosito/flutter-action
+# Added unit tests with: https://betterprogramming.pub/creating-a-complete-github-workflow-for-flutter-529f6bd7bb10
+# reading todo: https://petercoding.com/flutter/2021/07/18/using-github-actions-with-flutter/
+# more reading todo: https://medium.com/mobile-development-group/github-actions-for-flutter-cf02923d7b5d
 name: Android Release
 
 on:
