upload apk build

--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -7,13 +7,13 @@
 name: Android Release
 
 on:
- # run on push to "main" branch
+  # run on push to "main" branch
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
   # run on pull_request to "main"  branch
   pull_request:
-    branches: [ "main" ] 
+    branches: ["main"]
 
   # allow action to be run from github UI
   workflow_dispatch:
@@ -21,27 +21,27 @@ on:
 jobs:
   build:
     name: Create Android Build
-    needs: version # by default jobs run in parallel. set version job as depencdency to version.txt is created for build job. 
+    needs: version # by default jobs run in parallel. set version job as dependency to version.txt is created for build job.
     runs-on: ubuntu-latest
 
     steps:
       # checkout source
       - uses: actions/checkout@v3
 
-      # Setup Java environment for Andorid build
+      # Setup Java environment for Android build
       - uses: actions/setup-java@v3
         with:
-          distribution: 'zulu'
+          distribution: "zulu"
           java-version: "12.x"
-          cache: 'gradle' # speed up java setup
-      
+          cache: "gradle" # speed up java setup
+
       # Setup flutter SDK
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.10.5"
-          channel: 'stable'
+          channel: "stable"
           cache: true # speed up flutter sdk setup
-      
+
       # Get flutter dependencies
       - name: Get dependencies
         run: flutter pub get
@@ -53,12 +53,12 @@ jobs:
       # Run unit tests!
       - name: Run unit tests
         run: flutter test --coverage
-        
+
       # Run integration tests! On second thought, don't, we need a device emulator!
       # TODO: setup a device emulator and run integration tests
       # - name: Run integration tests
       #   run: flutter test integration_test
-        
+
       # Get version.txt workflow artifact created by version job
       - name: Get version.txt
         uses: actions/download-artifact@v2
@@ -68,58 +68,62 @@ jobs:
       # Create version1.txt file from version.txt without newlines
       - name: Create new file without newline char from version.txt
         run: tr -d '\n' < version.txt > version1.txt
-        
+
       # wow, this is kind of involved just to get a version number
       - name: Read version
         id: version
         uses: juliangruber/read-file-action@v1
         with:
           path: version1.txt
- 
+
       # set version in pubspec.yaml
       - name: Update version in YAML
         run: sed -i 's/99.99.99+99/${{ steps.version.outputs.content }}+${{ github.run_number }}/g' pubspec.yaml
 
-      # run flutter android appbundle build
+      # run flutter android apk build
       - name: Start release build
         run: flutter build apk --release
 
       # Create release?
-      - uses: ncipollo/release-action@v1
-        with: 
-          artifacts: "build/app/outputs/flutter-apk/*.apk"
+      # - uses: ncipollo/release-action@v1
+      #   with:
+      #     artifacts: "build/app/outputs/flutter-apk/*.apk"
+
+      # Upload generated apk to the artifacts.
+      - uses: actions/upload-artifact@v1
+        with:
+          name: release-apk
+          path: build/app/outputs/apk/release/app-release.apk
 
   version:
-      name: Create version number
-      # The type of runner that the job will run on
-      runs-on: ubuntu-latest
-      # Steps represent a sequence of tasks that will be executed as part of the job
-      steps:
-        
-        # checkout source
-        - uses: actions/checkout@v3
-          with:
-            fetch-depth: 0 # Needed to avoid commit not found GitVersion error, borrowed from https://github.com/GitTools/actions/blob/main/docs/examples/github/gitversion/setup/usage-examples.md
-            # Full error: GitVersion.GitVersionException: Cannot find commit 5c61deb comment. Please ensure that the repository is an unshallow clone with `git fetch --unshallow`.
+    name: Create version number
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # checkout source
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # Needed to avoid commit not found GitVersion error, borrowed from https://github.com/GitTools/actions/blob/main/docs/examples/github/gitversion/setup/usage-examples.md
+          # Full error: GitVersion.GitVersionException: Cannot find commit 5c61deb comment. Please ensure that the repository is an unshallow clone with `git fetch --unshallow`.
 
-        # Install gitversion
-        - name: Install GitVersion
-          uses: gittools/actions/gitversion/setup@v0.10.2
-          with:
-            versionSpec: "5.x"
-            includePrerelease: true
-        - name: Use GitVersion
-          id: gitversion
-          uses: gittools/actions/gitversion/execute@v0.10.2
+      # Install gitversion
+      - name: Install GitVersion
+        uses: gittools/actions/gitversion/setup@v0.10.2
+        with:
+          versionSpec: "5.x"
+          includePrerelease: true
+      - name: Use GitVersion
+        id: gitversion
+        uses: gittools/actions/gitversion/execute@v0.10.2
 
-        # Create version.txt
-        - name: Create version.txt with nuGetVersion
-          run: echo ${{ steps.gitversion.outputs.nuGetVersion  }} > version.txt
+      # Create version.txt
+      - name: Create version.txt with nuGetVersion
+        run: echo ${{ steps.gitversion.outputs.nuGetVersion  }} > version.txt
 
-        # Upload version.txt to workflow artifacts
-        - name: Upload version.txt
-          uses: actions/upload-artifact@v2
-          with:
-            name: gitversion
-            path: version.txt
-            
+      # Upload version.txt to workflow artifacts
+      - name: Upload version.txt
+        uses: actions/upload-artifact@v2
+        with:
+          name: gitversion
+          path: version.txt
